# ImageProcessor

./: CMakeLists.txt  MainMenu.cpp  MainMenu.h  Panel.cpp  Panel.h  Picture.cpp  Picture.h  Widgets.cpp  Widgets.h  cool_black_and_white.txt  coolthing.txt  final.txt  main.cpp  test_pic.txt
